# Youtube-autoupload-bot

./: .gitignore  ActualJsonFile.json  README.md  auth.py  config.py  csvJson.py  exampleJsonFile.json  hello.csv  main.py  pyproject.toml  scheduler.py  sheets.py  uploader.py  yt_upload.json
